- add support my specific recipe - finish 3.2
