# routes/dto/RecipeDto.js
@@ -1,12 +1,15 @@
 class RecipeDto {
-    constructor(id, user_id, title, readyInMinutes, vegetarian, vegan, glutenFree, servings, image, inventedBy, serveDay, instructions) {
+    constructor(id, title, readyInMinutes, popularity, vegetarian, vegan, glutenFree, hasViewed, isFavorite, servings,
+                image, inventedBy, serveDay, instructions) {
         this.id = id;
-        this.user_id = user_id;
         this.title = title;
         this.readyInMinutes = readyInMinutes;
+        this.popularity = popularity;
         this.vegetarian = vegetarian;
         this.vegan = vegan;
         this.glutenFree = glutenFree;
+        this.hasViewed = hasViewed;
+        this.isFavorite = isFavorite;
         this.servings = servings;
         this.image = image;
         this.inventedBy = inventedBy;
